# opensquilla-tw

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  Dockerfile  META_SKILL_GUIDE.md  MIGRATION.md  PRIVACY.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.md  README.product.md  README.product.zh-Hant.md  README.zh-Hans.md  README.zh-Hant.md  RELEASES.md  THIRD_PARTY_NOTICES.md  compose.yaml  install.ps1  install.sh  opensquilla.toml.example  pyproject.toml  start.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: check_ci_results.py  classify-ci-changes.sh  issue_link_sync.py  validate-pr-target-branch.sh  validate_pr_body.py  validate_pr_review_gate.py  verify-release-macos-upgrade.sh  verify-release-profile-preservation.py  verify-release-windows-upgrade.ps1  windows_test_shards.py
.github/workflows/: ci.yml  docker-image.yml  electron-desktop-installer-test.yml  issue-link-sync.yml  live-release-e2e.yml  live-search-e2e.yml  llm-e2e.yml  models-dev-refresh.yml  pr-body-lint.yml  pr-target-branch.yml  webui-browser-smoke.yml  wheelhouse-release.yml
Formula/: opensquilla.rb
desktop/electron/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: README.md  approvals-and-permissions.md  channels.md  cli.md  code-signing-policy.md  configuration.md  contributing-docs.md  diagnostics-and-replay.md  docker.md  experiments.md  features.md  gateway.md  glossary.md  mcp-server.md  meta-skill-trigger-validation-2026-06-05.md  meta-skill-validation-2026-05-31.md  operations.md  providers-and-models.md  quickstart.md  router-provider-model-matrix.md  search.md  self-migration-report-contract.md  session-view-contract.md  tools-and-sandbox.md  troubleshooting.md  tui-real-terminal-harness.md  tui.md  usage-and-cost.md  web-ui.md
docs/authoring/: meta-skills.md
docs/features/: meta-skills.md  (+11 more)
migrations/: V002__scheduler_session_fields.py  V003__heartbeat_ticks.py  V004__memory_schema_version.py  V006__scheduler_reservations.py  V008__scheduler_job_tool_policy.py  V011__meta_skill_runs_triggered_by_auto.py  V012__meta_skill_run_steps_allow_llm_chat.py  V013__meta_skill_runs_clarify.py  V014__meta_skill_run_steps_allow_user_input.py  V015__meta_skill_step_usage.py  V016__meta_skill_runs_triggered_by_manual_command.py  V017__router_decisions.py  V018__router_decisions_ts_index.py  V019__turn_errors.py
opensquilla-webui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: _gen_meta_short_drama.py  bench_tui_replay.py  build_wheelhouse_zip.py  compare_meta_skill_openclaw.py  compare_meta_skill_openclaw_lifestyle.py  install_source.ps1  install_source.sh  live_codex_smoke.py  live_compat_tool_route_smoke.py  live_cross_provider_tiers.py  live_deepseek_tool_replay_smoke.py  live_long_context_chat_smoke.py  live_meta_skill_creator_auto_propose_e2e.py  live_meta_skill_creator_e2e.py  live_openrouter_prompt_cache_smoke.py  live_provider_profile_gateway_e2e.py  live_provider_profile_smoke.py  live_provider_thinking_smoke.py  live_router_provider_output_recovery.py  live_v4_router_evidence.py  meta_skill_validation_matrix.py  refresh_models_dev_snapshot.py  run_draco_ensemble.py  smoke_v4_phase3_router.py  tui_real_terminal_lab.py  update_router_artifact_manifest.py
tests/: conftest.py  test_agent_cmd_no_key.py  test_artifacts.py  test_asyncio_utils.py  test_attachment_workspace.py  test_bundled_voice_skills.py  test_compose_yaml_shape.py  test_context_budget_governor.py  test_core_lightweight_contracts.py  test_cross_provider_tiers.py  test_engine_meta_events.py  test_execution_status_contract.py  test_gateway_config_default_provider.py  test_gateway_config_legacy.py  test_gateway_static_skills_view.py  test_gemini_thought_signature.py  test_github_issue_link_sync.py  test_inference_postprocess_rules.py  test_install_scripts.py  test_live_provider_profile_gateway_e2e.py  test_live_provider_profile_smoke.py  test_llm_ensemble_config.py  test_memory_archive.py  test_memory_checkpoint.py  test_memory_dream_factory.py  test_memory_embedding.py  test_memory_flush.py  test_memory_flush_status.py  test_memory_manager_embedding_config.py  test_memory_repair_service.py  test_memory_retention.py  test_memory_search_defaults.py  test_memory_store_embedding_usage.py  test_memory_store_keyword_fallback.py  test_memory_store_legacy_schema.py  test_meta_skill_label_coverage.py  test_meta_skill_openclaw_comparison.py  test_meta_skill_openclaw_lifestyle_comparison.py  test_meta_skill_parser_label_progress_emits.py  test_meta_skill_run_announce.py  (+69 more)
(+2482 files in other folders)
